# mock-api

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: auto-merge.yml  quality.yml  release.yml
app/: __init__.py  app.py
tests/: __init__.py  test_app.py
